--- a/slides/index.html
+++ b/slides/index.html
@@ -79,6 +79,11 @@
         </a>
       </li>
       <li>
+        <a href="lesson-14.html" title="">
+          lesson-14.html
+        </a>
+      </li>
+      <li>
         <a href="React-Router-notes.html" title="">
           React-Router-notes.html
         </a>
