--- a/slides/lesson-01.html
+++ b/slides/lesson-01.html
@@ -18,18 +18,17 @@
   <body>
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"># FEW 2.3 - Lesson 1
-
-Getting started with Single Page Applications and React.
 </script></section><section  data-markdown><script type="text/template">
 ## Overview
+
+This lesson will be a review of React and an introduction to functional programming. You can follow the lesson here or view it in slide form here: [Slides](https://make-school-courses.github.io/FEW-2.3-Single-Page-Web-Applications/slides/lesson-01.html#/)
 </script></section><section  data-markdown><script type="text/template">
-### Learning Objectives
+## Learning Objectives
 
 1. Create components
 1. Use JSX
-1. Differentiate props and state 
-1. Define the virtual DOM
-1. Create Single Page Application
+1. Use functional programming ideas
+  - map, filter, and reduce
 </script></section><section  data-markdown><script type="text/template">
 ## Single Page Applications
 </script></section><section  data-markdown><script type="text/template">
@@ -150,13 +149,11 @@ import React from 'react';
 
 function App() {
   return (
-  
       <div className="App">
         <header className="App-header">
           <h1>Hello World</h1>
         </header>
       </div>
-    
   );
 }
 
